# Formula1

./: README.md  first-commit.txt
formula1/: README.md  pyproject.toml
formula1/db/: chroma.sqlite3
formula1/src/formula1/: main.py
formula1/src/formula1/crews/central/: classifier.py
formula1/src/formula1/crews/central/config/: tasks.yaml
formula1/src/formula1/crews/classifier/: classifier.py
formula1/src/formula1/crews/classifier/config/: agents.yaml
formula1/src/formula1/crews/concrete/: concrete.py
formula1/src/formula1/crews/concrete/config/: agents.yaml  tasks.yaml
formula1/src/formula1/crews/general/: general.py
formula1/src/formula1/crews/general/config/: agents.yaml  tasks.yaml
formula1/src/formula1/crews/others/: others.py
formula1/src/formula1/crews/others/config/: agents.yaml  tasks.yaml
formula1/src/formula1/tools/: custom_tool.py
