[project]
name = "formula1"
version = "0.1.0"
description = "Formula1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0",
    "ollama>=0.5.3",
]

[project.scripts]
kickoff = "formula1.main:kickoff"
run_crew = "formula1.main:kickoff"
plot = "formula1.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
